scss/partials/_drafts_layout.scss
div.drafts-layout {
  margin-left: 16px;

  div.draft-cards-container {
    width: 888px;
    // div.draft-card-row {
    //   display: flex;
    div.draft-card-column {
      width: 432px;
      float: left;

      &:first-child {
        margin-right: 24px;
      }

      div.draft-card {
        // flex: 1;
        width: 432px;
        max-height: 438px;
        background-color: white;
        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.05);
        border: solid 0.5px rgba(177, 184, 192, 0.24);
        border-radius: 8px;
        min-height: 100px;
        // padding-bottom: 48px;
        position: relative;
        margin-top: 24px;

        div.draft-banner {
          background-repeat: no-repeat;
          background-size: cover;
          background-position: 50%;
          width: 100%;
          max-height: 234px;
          border-top-left-radius: 8px;
          border-top-right-radius: 8px;
        }

        div.draft-card-tag {
          @include activity-tag();
          padding: 16px 16px 0;
        }

        div.draft-card-title {
          @include activity-title();
          font-size: 24px;
          color: $carrot_dark_gray;
          padding: 16px;
        }

        div.draft-card-footer-last-edit {
          padding: 16px;
          margin: 16px;
          height: 46px;
          width: 398px;
          background-color: #D4F7E5;
          border-radius: 4px;
          cursor: pointer;

          span.edit {
            float: left;
            color: $carrot_green;
          }

          span.last-edit {
            float: right;
            color: $carrot_green;
            @include avenir_O();
            font-size: 14px;
            opacity: 0.5;
          }
        }

        div.draft-card-body {
          @include activity-body();
          @include avenir_M();
          font-size: 16px;
          color: $oc_gray_7;
          outline: none;
          cursor: text;
          padding: 16px;
          position: relative;
          overflow: hidden;

          * {
            color: $oc_gray_7;
          }

          &.empty-body {
            opacity: 0.3;
            font-size: 16px;
            line-height: 32px;
          }
        }

        div.bottom-gradient {
          position: absolute;
          bottom: 64px;
          left: 0px;
          right: 0px;
          height: 40px;
          z-index: 10;
          pointer-events: none;
          background: -moz-linear-gradient(bottom,  rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255,0) 100%); /* FF3.6+ */
          background: -webkit-gradient(linear, bottom, top, color-stop(0%,rgba(255, 255, 255,0)), color-stop(100%,rgba(255, 255, 255,1))); /* Chrome,Safari4+ */
          background: -webkit-linear-gradient(bottom,  rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255,0) 100%); /* Chrome10+,Safari5.1+ */
          background: -o-linear-gradient(bottom,  rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255,0) 100%); /* Opera 11.10+ */
          background: -ms-linear-gradient(bottom,  rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255,0) 100%); /* IE10+ */
          background: linear-gradient(to top,  rgba(255, 255, 255, 1) 0%,rgba(255, 255, 255,0) 100%); /* W3C */
          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='transparent',GradientType=0 ); /* IE6-9 */
        }

        div.draft-card-footer {
          background-color: $carrot_light_gray_2;
          padding: 8px 16px;
          margin-top: 4px;
          position: absolute;
          left: 0px;
          bottom: 0px;
          width: 432px;
          height: 48px;

          div.draft-card-footer-left {
            margin-top: 8px;
            font-size: 14px;
            color: rgba($oc_gray_7, 0.5);
            @include avenir_R();
            float: left;
          }

          div.draft-card-footer-right {
            margin-top: 8px;
            font-size: 14px;
            color: rgba($oc_gray_7, 0.5);
            @include avenir_R();
            float: right;
          }
        }

        &.empty-draft {
          background-color: transparent;
          box-shadow: none;
          border: none;
        }
      }
    }
  }
}

